add content, home hero image, social media hover

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
                     href="#">Gallery</a>
 
                 <a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Donate</a>
+                    href="donate.html">Donate</a>
             </nav>
         </div>
     </div>
@@ -160,9 +160,9 @@
 
 
 
-    <!-- Achievement start -->
+    <!-- news media start -->
     <div class="bg-white">
-        <h2 class="pt-12 text-3xl text-center">Achievement</h2>
+        <h2 class="pt-12 text-3xl text-center">News Media</h2>
 
         <div class="mx-auto max-w-2xl px-4 py-12 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
@@ -381,7 +381,7 @@
 
             <div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
                 <div class="flex space-x-6 md:order-2">
-                    <a href=" " class="text-white hover:text-sky-600">
+                    <a href=" " class="text-white hover:text-red-600">
                         <span class="sr-only">Facebook</span>
                         <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -390,7 +390,7 @@
                         </svg>
                     </a>
 
-                    <a href=" " class="text-white hover:text-sky-600">
+                    <a href=" " class="text-white hover:text-red-600">
                         <span class="sr-only">Twitter</span>
                         <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path
