--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
 	<!-- hero image -->
 	<section>
 		<div class="w-full ">
-			<img class="w-full h-96"
-				src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2YujsRG5O3hKByA32l0c0iy7fzASgQuclWtMxhNvWCg&s"
-				alt="">
+			<img class="w-full lg:h-112" src="public/image/image 81 (1).png" alt="">
 		</div>
 	</section>
 
@@ -114,14 +112,43 @@
 	<section>
 		<div class="lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left container mx-auto mt-4 lg:mt-0">
 
-			<h1 class="lg:text-3xl text-lg font-semibold text-color capitalize lg:text-4xl text-base">
+			<!-- <h1 class="lg:text-3xl text-lg font-semibold text-color capitalize lg:text-4xl text-base">
 				Demo
-			</h1>
+			</h1> -->
 
-			<p class="font-family-class  mb-6 ">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate nemo ratione
-				aperiam nesciunt labore nobis nam dolore sunt! Hic qui, nihil facilis sit quas consequuntur
-				aperiam consequatur officia beatae.
+			<p class="text-justify text-lg mb-6 ">
+				Sachcha Prayas is dedicated to creating a society where every citizen, with a special focus on women and children,
+				can lead a life of dignity and equality. We firmly believe in empowering marginalized sections,
+				especially women and children, by providing them with knowledge and opportunities to live meaningful
+				lives. Our mission encompasses various initiatives to promote income generation activities,
+				environmental security, health and hygiene practices, legal awareness, and child rights.
+
+				At our organization, we strive to ensure that women, adolescent girls, and children are empowered
+				through awareness generation, training, capacity building, and access to their rights and entitlements.
+				We are committed to nurturing leadership and fostering an environment where everyone can flourish.
+
+				Through our collective efforts, we aim to promote environmental sustainability by creating awareness and
+				supporting the plantation of trees. We also focus on sustainable management of natural resources, such
+				as land and water, to secure a better future for generations to come.
+
+				Health and hygiene are fundamental to a thriving community. Our village-level awareness programs and
+				construction of household toilets in collaboration with government schemes aim to improve overall
+				well-being and quality of life.
+
+				We are dedicated to promoting social justice and supporting those in need. We strive to empower
+				individuals with disabilities, advocating for their rights and linking them with government departments
+				for necessary support.
+
+				In times of natural calamities, we extend our support to those affected, providing essential aid and
+				resources to help them rebuild their lives.
+
+				Through our various awareness campaigns, including legal literacy camps, health camps, and creative
+				activities for children, we hope to create mass awareness among community members and foster a
+				people-centered approach to advocacy on common issues.
+
+				We are passionate about making a positive impact and believe that collective action can bring about
+				significant change. Join us in our journey to create a more equitable, sustainable, and empowered
+				society for all. Together, we can build a brighter future.
 			</p>
 		</div>
 	</section>
@@ -171,7 +198,7 @@
 
 			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -180,7 +207,7 @@
 						</svg>
 					</a>
 
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Twitter</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
