--- a/about.html
+++ b/about.html
@@ -95,38 +95,40 @@
 		<div class="mx-auto max-w-8xl container lg:px-6 px-4 py-12">
 
 			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
-				<!-- 111 -->
+				<!-- Mission -->
 				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class="font-semibold leading-7">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
 						</p>
 					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum, dolor sit amet consectetur
-						adipisicing elit. Corporis dicta, animi, quaerat ullam cum porro ipsam doloremque ad saepe, sed
-						alias in labore beatae est nam tempora perspiciatis officiis vel!</dd>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">To empower the marginalised section of
+						society especially women and children and ensure their reach to access knowledge and information
+						which helps to lead a dignified life.</dd>
 				</div>
 
-				<!-- 2222 -->
+				<!-- vision -->
 				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
 						</p>
 					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum dolor sit amet consectetur,
-						adipisicing elit. Nemo magnam a, ex possimus veniam, tempora at quam repellat quos doloremque
-						mollitia veritatis iure temporibus dolores! Eveniet delectus facere ea. Perferendis?</dd>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">To create a society where every citizen,
+						especially women and children, lives with dignity and has equal access to services related to
+						health, education, and other basic needs services.
+					</dd>
 				</div>
 
-				<!-- 33333 -->
+				<!-- Objective -->
 				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
 							Objective
 						</p>
 					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum dolor, sit amet consectetur
-						adipisicing elit. Magni illo iusto, repellendus ullam deleniti molestias molestiae id quas,
-						dolore soluta ducimus minima eos perspiciatis nam omnis ipsa animi. Assumenda, porro!</dd>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
+						This project aims to empower women and girls by promoting income generation skills, raising
+						awareness, and improving access to rights. It also focuses on environmental security, health,
+						and legal awareness to build a sustainable and empowered community.</dd>
 				</div>
 
 			</dl>
@@ -168,7 +170,7 @@
 
 			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -177,7 +179,7 @@
 						</svg>
 					</a>
 
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Twitter</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
