--- a/donate.html
+++ b/donate.html
@@ -13,71 +13,125 @@
 
 <body class="bg-white font-sans leading-normal tracking-normal font-serif">
 
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-    <div class="w-full text-gray-300 bg-white drop-shadow-md font-family-class">
-        <div x-data="{ open: false }"
-            class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 header-background">
-            <div class="flex flex-row items-center justify-between">
+	<div class="w-full text-gray-300 bg-white drop-shadow-md font-family-class">
+		<div x-data="{ open: false }"
+			class="p-2 flex flex-col  md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 header-background">
+			<div class="flex flex-row items-center justify-between">
 
-                <a href="index.html"><img
-                    src="public/image/logo.png"
-                    alt="logo" class="h-full w-20"></a>
-
-                    
-                <button aria-label="hamberger-btn" class="md:hidden rounded-lg focus:outline-none focus:shadow-outline" @click="open = !open">
-                    <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6 text-white">
-                        <path x-show="!open" fill-rule="evenodd"
-                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
-                            clip-rule="evenodd"></path>
-                        <path x-show="open" fill-rule="evenodd"
-                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                            clip-rule="evenodd"></path>
-                    </svg>
-                </button>
-            </div>
+				<a href="index.html"><img src="public/image/logo.png" alt="logo" class="h-full w-20"></a>
 
 
-            <nav :class="{'flex': open, 'hidden': !open}"
-                class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
-                <a class="px-4 py-2 mt-2 text-base font-semibold text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="index.html">Home</a>
+				<button aria-label="hamberger-btn" class="md:hidden rounded-lg focus:outline-none focus:shadow-outline"
+					@click="open = !open">
+					<svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6 text-white">
+						<path x-show="!open" fill-rule="evenodd"
+							d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
+							clip-rule="evenodd"></path>
+						<path x-show="open" fill-rule="evenodd"
+							d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+							clip-rule="evenodd"></path>
+					</svg>
+				</button>
+			</div>
 
-                    <a class="px-4 py-2 mt-2 text-base font-semibold text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="about.html">About Us</a>
 
-                <!-- **** -->
+			<nav :class="{'flex': open, 'hidden': !open}"
+				class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
+				<a class="px-4 py-2 mt-2 text-base font-semibold text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="index.html">Home</a>
 
-                <a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50     md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+				<a class="px-4 py-2 mt-2 text-base font-semibold text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="about.html">About Us</a>
+
+				<!-- **** -->
+
+				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50     md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="our-work.html">Our Work</a>
 
-                <a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="team.html">Team</a>
+				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="team.html">Team</a>
 
-					<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="gallery.html">Gallery</a>
+				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="gallery.html">Gallery</a>
 
-                <a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Donate</a>
-            </nav>
-        </div>
-    </div>
-    <!-- **** Header section end *** -->
-   
-
-    <!-- body -->
-    <div>
-		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur fugit vitae quis ullam voluptates
-		corporis, voluptatum quo, nemo dignissimos adipisci rem eos commodi placeat neque, nesciunt earum quasi?
-		Excepturi, et?
-		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, temporibus provident sint laborum reprehenderit
-		error illum ipsam minima deleniti labore delectus, quidem, veniam nihil cumque magnam eaque voluptas aut
-		sapiente.
+				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="#">Donate</a>
+			</nav>
+		</div>
 	</div>
+	<!-- **** Header section end *** -->
+
+	<!-- contact -->
+
+	<!-- contact section -->
+	<div class="bg-white px-6 py-24 sm:py-32 lg:px-8">
+		<div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]"
+			aria-hidden="true">
+			<div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]"
+				style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
+			</div>
+		</div>
+
+		<div class="mx-auto max-w-2xl text-center">
+			<h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact Us</h2>
+
+		</div>
+
+		<!-- form -->
+		<form action="https://formsubmit.co/your@email.com" method="POST" class="mx-auto mt-14 max-w-xl sm:mt-20">
+			<div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+				<div>
+					<label for="first-name" class="block text-sm font-semibold leading-6 text-gray-900">First
+						name</label>
+					<div class="mt-2.5">
+						<input type="text" name="first-name" id="first-name" autocomplete="given-name"
+							class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
+				</div>
+				<div>
+					<label for="last-name" class="block text-sm font-semibold leading-6 text-gray-900">Last name</label>
+					<div class="mt-2.5">
+						<input type="text" name="last-name" id="last-name" autocomplete="family-name"
+							class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
+				</div>
+				<div class="sm:col-span-2">
+					<label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Company</label>
+					<div class="mt-2.5">
+						<input type="text" name="company" id="company" autocomplete="organization"
+							class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
+				</div>
+				<div class="sm:col-span-2">
+					<label for="email" class="block text-sm font-semibold leading-6 text-gray-900">Email</label>
+					<div class="mt-2.5">
+						<input type="email" name="email" id="email" autocomplete="email"
+							class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+					</div>
+				</div>
+
+				<div class="sm:col-span-2">
+					<label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Message</label>
+					<div class="mt-2.5">
+						<textarea name="message" id="message" rows="4"
+							class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+					</div>
+				</div>
+			</div>
+
+			<!-- submit -->
+			<div class="mt-10">
+				<button type="submit"
+					class="block w-full donate rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-red-600 ">
+					Submit</button>
+			</div>
+		</form>
+	</div>
+<!-- contact end -->
 
 
-    <!-- footer  -->
-    
 	<!-- footer  -->
 	<footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
 		<!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
@@ -109,7 +163,7 @@
 
 			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -118,7 +172,7 @@
 						</svg>
 					</a>
 
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600 ">
 						<span class="sr-only">Twitter</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
@@ -157,7 +211,7 @@
 	</footer>
 
 
-    <script src="index.js"></script>
+	<script src="index.js"></script>
 
 </body>
 
