--- a/our-work.html
+++ b/our-work.html
@@ -209,7 +209,7 @@
 
 			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -218,7 +218,7 @@
 						</svg>
 					</a>
 
-					<a href=" " class="text-white hover:text-sky-600">
+					<a href=" " class="text-white hover:text-red-600">
 						<span class="sr-only">Twitter</span>
 						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
