--- a/team.html
+++ b/team.html
@@ -84,7 +84,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								One
+								Smt.Raziya mansoori 
 
 						</li>
 						<!-- <li class="pt-1">
@@ -98,7 +98,7 @@
                             </a>
                         </li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Designantion</h2>
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">President</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2">Lorem ipsum dolor sit amet consectetur,
 						adipisicing elit. Perspiciatis consectetur explicabo possimus hic voluptatum magni. Fuga sunt
@@ -116,7 +116,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Two
+								Mr Anil raikwar
 
 						</li>
 						<!-- <li class="pt-1">
@@ -131,7 +131,7 @@
 							</a>
 						</li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg"> Designantion
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg"> Vice President
 					</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2"> MLorem ipsum dolor sit amet consectetur,
@@ -152,7 +152,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Three
+								Mr.	Parwez khan 
 
 						</li>
 						<!-- <li class="pt-1">
@@ -166,7 +166,7 @@
                             </a>
                         </li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Designantion
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Secretary
 					</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2"> Lorem ipsum dolor sit amet consectetur,
@@ -190,7 +190,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Four
+								Mr.firozkhan
 						</li>
 						<!-- <li class="pt-1">
 							<a href="https://www.linkedin.com/in/eleena-george-763567148/"
@@ -204,7 +204,7 @@
 							</a>
 						</li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Designantion</h2>
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Treasurer</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2">Lorem ipsum dolor sit amet consectetur,
 						adipisicing elit. Perspiciatis consectetur explicabo possimus hic voluptatum magni. Fuga sunt
@@ -224,8 +224,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Five
-
+								Kum. Prem lata 
 
 						</li>
 						<!-- <li class="pt-1">
@@ -239,7 +238,7 @@
                             </a>
                         </li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Designantion
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Joint Secretary
 					</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2"> Lorem ipsum dolor sit amet consectetur,
@@ -261,7 +260,8 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Six
+								Mr.Amit dass parwar
+
 						</li>
 						<!-- <li class="pt-1">
                             <a href="#" class="text-black hover:text-gray-500 pt-2">
@@ -274,7 +274,7 @@
                             </a>
                         </li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Designantion</h2>
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Member</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2"> Lorem ipsum dolor sit amet consectetur,
 						adipisicing elit. Perspiciatis consectetur explicabo possimus hic voluptatum magni. Fuga sunt
@@ -294,7 +294,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Seven
+								Kum.Naziya sultana 
 						</li>
 						<!-- <li class="pt-1">
                             <a href="#" class="text-black hover:text-gray-500 pt-2">
@@ -307,7 +307,7 @@
                             </a>
                         </li> -->
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Designantion</h2>
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Membar </h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2"> Lorem ipsum dolor sit amet consectetur,
 						adipisicing elit. Perspiciatis consectetur explicabo possimus hic voluptatum magni. Fuga sunt
