added news images and updated home page para

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</h1> -->
 
 			<p class="text-justify text-lg mb-6 ">
-				Sachcha Prayas is dedicated to creating a society where every citizen, with a special focus on women and children,
+				<!-- Sachcha Prayas is dedicated to creating a society where every citizen, with a special focus on women and children,
 				can lead a life of dignity and equality. We firmly believe in empowering marginalized sections,
 				especially women and children, by providing them with knowledge and opportunities to live meaningful
 				lives. Our mission encompasses various initiatives to promote income generation activities,
@@ -148,7 +148,8 @@
 
 				We are passionate about making a positive impact and believe that collective action can bring about
 				significant change. Join us in our journey to create a more equitable, sustainable, and empowered
-				society for all. Together, we can build a brighter future.
+				society for all. Together, we can build a brighter future. -->
+				Sachcha Prayas is committed to creating a society where every citizen, especially women and children, can lead a life of dignity and equality. Their mission encompasses various initiatives to promote income generation activities, environmental security, health and hygiene practices, legal awareness, and child rights. They aim to promote environmental sustainability, social justice, and support those in need. Through their various awareness campaigns, they hope to create mass awareness among community members and foster a people-centered approach to advocacy on common issues.
 			</p>
 		</div>
 	</section>
