--- a/new-gallery.html
+++ b/new-gallery.html
@@ -54,7 +54,7 @@
                     href="team.html">Team</a>
 
                 <a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="gallery.html">Gallery</a>
+                    href="#">Gallery</a>
 
                 <a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                     href="donate.html">Donate</a>
@@ -68,9 +68,9 @@
     <div class="bg-white">
         <h2 class="pt-12 text-center text-3xl">Gallery</h2>
 
-        <div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+        <div class="mx-auto max-w-2xl px-8 py-8 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
-            <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
+            <div class="grid grid-cols-1 gap-x-6 gap-y-14 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-20">
                 <!-- card-1 -->
                 <a href="./Gallery/women-empowerment.html" class="group border border-color rounded-lg shadow-xl">
                     <div
