--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
 					href="#">Team</a>
 
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-					href="gallery.html">Gallery</a>
+					href="new-gallery.html">Gallery</a>
 
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="donate.html">Donate</a>
@@ -84,7 +84,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Smt.Raziya mansoori 
+								Smt.Raziya mansoori
 
 						</li>
 						<!-- <li class="pt-1">
@@ -152,7 +152,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Mr.	Parwez khan 
+								Mr. Parwez khan
 
 						</li>
 						<!-- <li class="pt-1">
@@ -224,7 +224,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Kum. Prem lata 
+								Kum. Prem lata
 
 						</li>
 						<!-- <li class="pt-1">
@@ -294,7 +294,7 @@
 					<ul role="list" class="mt-6 flex gap-x-6 justify-center">
 						<li>
 							<h3 class="text-center text-lg font-semibold leading-8 tracking-tight text-gray-900">
-								Kum.Naziya sultana 
+								Kum.Naziya sultana
 						</li>
 						<!-- <li class="pt-1">
                             <a href="#" class="text-black hover:text-gray-500 pt-2">
@@ -416,7 +416,7 @@
 						<h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
 						<p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153, 6263797445</p>
 						<p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
-						
+
 					</div>
 				</div>
 			</div>
@@ -461,7 +461,8 @@
 							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
 							target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
 							Fellows</a> &
-						Hosted Freely on <a href="" class="li-text-color  hover: hover:donate-color hover:underline">Github
+						Hosted Freely on <a href=""
+							class="li-text-color  hover: hover:donate-color hover:underline">Github
 							Pages</a>
 						</a>
 					</p>
