fiex images in index page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<!-- hero image -->
 	<section>
 		<div class="w-full ">
-			<img class="w-full lg:h-112" src="public/image/image 81 (1).png" alt="">
+			<img class="w-full lg:h-112" src="public/image/gallery/gallery-img-41.png" alt="">
 		</div>
 	</section>
 
