updated the gallary page with new images for every section

--- a/new-gallery.html
+++ b/new-gallery.html
@@ -86,7 +86,7 @@
                 <a href="./Gallery/child-development.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/gallery/gallery-img-3.JPG"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
@@ -97,7 +97,7 @@
                 <a href="./Gallery/specially-abled.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/gallery/gallery-img-6.JPG"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
@@ -109,7 +109,7 @@
                 <a href="#" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/gallery/gallery-img-47.JPG"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
@@ -120,7 +120,7 @@
                 <a href="./Gallery/Health-Education.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/gallery/gallery-img-20.JPG"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
@@ -132,18 +132,18 @@
                 <a href="./Gallery/EcoRestoration.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/gallery/gallery-img-35.JPG"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
-                    <h3 class="mt-4 text-xl text-center">EcoRestoration Project</h3>
+                    <h3 class="mt-4 text-xl text-center">EnvRestoration Project</h3>
                 </a>
 
                 <!-- card-7 -->
                 <a href="./Gallery/news-media.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/news/news-img3.jpg"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
@@ -155,7 +155,7 @@
                 <a href="./Gallery/awards-acheivements.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
-                        <img src="public/image/gallery/gallery-img-1.JPG"
+                        <img src="public/image/certificates/certi 9.jpg"
                             alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                             class="h-full w-full object-cover object-center group-hover:opacity-75 ">
                     </div>
