--- a/Gallery/Legal-aid.html
+++ b/Gallery/Legal-aid.html
@@ -84,7 +84,7 @@
                 <a href="#" class="group">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                        <img src="../public/image/gallery/gallery-img-50.JPG"
+                        <img src="../public/image/gallery/gallery-img-50.jpg"
                             alt="Olive drab green insulated bottle with flared screw lid and flat top."
                             class="h-full w-full object-cover object-center group-hover:opacity-75">
                     </div>
