--- a/new-gallery.html
+++ b/new-gallery.html
@@ -106,7 +106,7 @@
 
 
                 <!-- card-4 -->
-                <a href="#" class="group border border-color rounded-lg shadow-xl">
+                <a href="./Gallery/Legal-aid.html" class="group border border-color rounded-lg shadow-xl">
                     <div
                         class="aspect-h-1 aspect-w-1 w-full overflow-hidden xl:aspect-h-8 xl:aspect-w-7 shadow-xl bg-white rounded-t-lg">
                         <img src="public/image/gallery/gallery-img-47.JPG"
