home carousel, about text

--- a/about.html
+++ b/about.html
@@ -68,49 +68,41 @@
 	<section>
 		<div class="container mx-auto flex flex-col lg:flex-row justify-center items-center my-20">
 			<div class="lg:w-6/12 w-full">
-				<img class=" px-8" src="public/image/team/Mr.parwez khan .jpg" alt="">
+				<img class=" px-8" src="public/image/team/image 109.png" alt="">
 			</div>
 
 			<div class="w-10/12 lg:px-8 text-justify py-4 lg:py-0  pt-8">
 				<p>
-					Mr. Parvez Khan : Belongs to an old landlord family living in a small village Mankedi in Bargi
-					block of
-					Jabalpur development block rural, a very small district of Madhya Pradesh, but the irony is that
-					when
-					Parvez was born in this family, he did not see landlordism. When Parvez was born in 1981, the
-					longest
-					Bargi Dam in Madhya Pradesh had been built in his area and this Bargi Dam had brought his family
-					into
-					the category of displaced families, that is, all the land and property of his forefathers had gone
-					to
-					the Bargi Dam. Parvez saw a lot of struggles in his life and there was a huge community of displaced
-					persons around him, seeing their sufferings, Parvez often used to fight. Parvez adopted rural
-					journalism
-					after finishing his studies, for this Parvez.
+					Mr. Parvez Khan was born into a traditional landlord family in the village of Mankedi in Jabalpur,
+					Madhya Pradesh. However, his family faced displacement due to the construction of the Bargi Dam when
+					he was born in 1981. This shifted them from landlords to displaced individuals. Parvez grew up
+					witnessing the struggles of his own family and the surrounding displaced community, which fueled his
+					determination to make a difference.
+
 				</p>
 
 				<p>
-					Mr. Khan started highlighting the issues related to water, forest, land and displacement of rural
-					areas in the media as he obtained a degree in journalism and mass communication while staying in his
-					village. Along with this, Parvez also obtained a master's degree in rural development and Parvez
-					took a big decision not to do any kind of job.
+					After completing his education, including a degree in journalism and mass communication, Parvez
+					chose rural journalism as his path. He used media as a platform to shed light on issues related to
+					water, forests, land, and displacement in rural areas. He also pursued a master's degree in rural
+					development and decided to forgo traditional employment opportunities.
 				</p>
 
 				<p>
-					During this time, the thought of doing something for the women of his rural area kept running in his
-					mind. Mr. Khan says that usually the women of his area were involved in the work of chopping wood
-					from the forest, selling it in the market, plucking tendu leaves, grazing cows, buffaloes or doing
-					farm labor, etc. Parvez wanted that women should become financially empowered and live a respectable
-					life by acquiring some skill and try to improve themselves and their families while increasing their
-					livelihood. Sharma, who was working on dress designing and issues related to women, Mr. Khan,
-					together with her, tried to open a training center for women for sewing, embroidery, beautician and
-					other employment-oriented works, but Mr. Khan had only a vision, but due to lack of resources to
-					open a training center, where there is a will, there is a way, Mr. Khan started his first training
-					center after the children's leave in the Anganwadi of his female friend Neha Sharma's elder sister
-					and 15 women were made skilled in sewing, embroidery and beauty parlor free of cost, which was
-					greatly appreciated by the Women and Child Development Department and in this way the first work of
-					the organization was successfully completed in zero budget and the concept of laying the foundation
-					of an organization named Sacha Prayas was also born.
+					Driven by a desire to empower women in his community, Parvez noticed that local women were engaged
+					in labor-intensive tasks like collecting wood, tending to cattle, and agricultural work. He
+					envisioned a way to help them gain skills that would enable them to lead financially independent
+					lives with dignity. Collaborating with Neha Sharma, a friend working on dress designing and women's
+					issues, Parvez initiated a training center for women, offering courses in sewing, embroidery, and
+					beauty skills. Despite resource constraints, he started the first training center in an Anganwadi
+					(childcare center), providing free training to 15 women.
+				</p>
+
+				<p>
+					This initiative gained recognition from the Women and Child Development Department and marked the
+					successful launch of Sacha Prayas, an organization aimed at uplifting rural women through skill
+					development and empowerment. Despite limited resources, Parvez's determination and vision led to the
+					creation of a meaningful organization that aimed to transform the lives of women in his community.
 				</p>
 
 			</div>
