--- a/index.html
+++ b/index.html
@@ -52,37 +52,6 @@
 				<a class="px-4 py-2 mt-2 text-base font-semibold text-white rounded-lg  md:mt-0 hover:text-black hover:bg-gray-50 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="about.html">About Us</a>
 
-				<!-- ***** -->
-				<!-- <div @click.away="open = false" class="relative" x-data="{ open: false }">
-					<button @click="open = !open" aria-label="navbar-links"
-						class="text-white flex flex-row items-center w-full px-4 py-2 mt-2 text-base font-semibold text-left bg-transparent rounded-lg hover:text-black hover:bg-gray-50  md:w-auto md:inline md:mt-0 md:ml-4 hover:text-white focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
-						<span>Programs</span>
-						<svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}"
-							class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1">
-							<path fill-rule="evenodd"
-								d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-								clip-rule="evenodd"></path>
-						</svg>
-					</button>
-					<div x-show="open" x-transition:enter="transition ease-out duration-100"
-						x-transition:enter-start="transform opacity-0 scale-95"
-						x-transition:enter-end="transform opacity-100 scale-100"
-						x-transition:leave="transition ease-in duration-75"
-						x-transition:leave-start="transform opacity-100 scale-100"
-						x-transition:leave-end="transform opacity-0 scale-95"
-						class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48">
-						<div class="px-2 py-2 bg-white rounded-md shadow  text-white">
-							<a class="block px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg  hover:text-black   md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-								href="nurture-merit.html">Nurture Merit</a>
-							<a class="block px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg  hover:text-black   md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-								href="mission-thalassemia.html">Mission Thalassemia</a>
-							<a class="block px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg  hover:text-black   md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-								href="economic-development-initiatives.html">Economic Development Initiatives</a>
-						</div>
-					</div>
-				</div> -->
-
-				<!-- **** -->
 
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50     md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="our-work.html">Our Work</a>
@@ -102,11 +71,66 @@
 
 
 	<!-- hero image -->
-	<section>
+	<!-- <section>
 		<div class="w-full ">
-			<img class="w-full lg:h-112" src="public/image/gallery/gallery-img-41.png" alt="">
+			<img class="w-full" src="public/image/gallery/image 107 (1).png" alt="">
+		</div>
+	</section> -->
+
+	<!-- carousel -->
+	<section class="lg:px-24 lg:py-8 py-4 flex flex-col justify-center ">
+		<div class="flex items-center justify-center relative container mx-auto lg:my-4 p-2">
+			<div x-data="{ activeSlide: 0 }" class="relative overflow-hidden w-full  lg:mx-14 mx-6">
+				<!-- slides -->
+				<div class="carousel">
+
+					<!-- slide-1 -->
+					<div x-show="activeSlide === 0" class="carousel-item border border-gray-800 rounded-md ">
+						<img class="w-full rounded-md" src="public/image/gallery/carousel1.png" alt="Image 1">
+					</div>
+
+					<!-- slide-2 -->
+					<div x-show="activeSlide === 1" class="carousel-item border border-gray-800  rounded-md">
+						<img class="w-full rounded-md" src="public/image/gallery/carousel2.png" alt="Image 2">
+					</div>
+
+					<!-- slide-3 -->
+					<div x-show="activeSlide === 2" class="carousel-item border border-gray-800  rounded-md">
+						<img class="w-full rounded-md" src="public/image/gallery/carousel3.png" alt="Image 3">
+					</div>
+
+					<!-- slide-4 -->
+					<div x-show="activeSlide === 3" class="carousel-item border border-gray-800 rounded-md ">
+						<img class="w-full rounded-md" src="public/image/gallery/carousel4.png" alt="Image 4">
+					</div>
+
+
+				</div>
+
+				<!-- controllers -->
+				<div class="carousel-controls">
+					<button @click="activeSlide = (activeSlide - 1 + 4) % 4"
+						class="carousel-control-prev w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer text-3xl font-bold text-black hover:text-white rounded-full bg-opacity-20 bg-white  leading-tight text-center z-10 inset-y-0 left-0 my-auto controller">
+						‹
+					</button>
+					<button @click="activeSlide = (activeSlide + 1) % 4"
+						class="carousel-control-next w-10 h-10 ml-2 md:ml-10 absolute cursor-pointer text-3xl font-bold text-black hover:text-white rounded-full bg-opacity-20 bg-white   leading-tight text-center z-10 inset-y-0 right-0 my-auto controller">
+						›
+					</button>
+				</div>
+				<!-- indicators -->
+				<div class="carousel-indicators mt-2 flex justify-center">
+					<template x-for="(slide, index) in 4">
+						<button @click="activeSlide = index" :class="{'active': activeSlide === index}"
+							class="carousel-indicator text-4xl text-gray-400 hover:text-gray-900">•</button>
+					</template>
+				</div>
+			</div>
 		</div>
 	</section>
+	<!-- end -->
+
+
 
 	<!-- Main body  -->
 	<section>
@@ -149,13 +173,19 @@
 				We are passionate about making a positive impact and believe that collective action can bring about
 				significant change. Join us in our journey to create a more equitable, sustainable, and empowered
 				society for all. Together, we can build a brighter future. -->
-				Sachcha Prayas is committed to creating a society where every citizen, especially women and children, can lead a life of dignity and equality. Their mission encompasses various initiatives to promote income generation activities, environmental security, health and hygiene practices, legal awareness, and child rights. They aim to promote environmental sustainability, social justice, and support those in need. Through their various awareness campaigns, they hope to create mass awareness among community members and foster a people-centered approach to advocacy on common issues.
+				Sachcha Prayas is committed to creating a society where every citizen, especially women and children,
+				can lead a life of dignity and equality. Their mission encompasses various initiatives to promote income
+				generation activities, environmental security, health and hygiene practices, legal awareness, and child
+				rights. They aim to promote environmental sustainability, social justice, and support those in need.
+				Through their various awareness campaigns, they hope to create mass awareness among community members
+				and foster a people-centered approach to advocacy on common issues.
 			</p>
 		</div>
 	</section>
 	<!-- Main body end  -->
 
 
+	<!-- donate button -->
 	<section>
 		<div class="mx-auto flex px-4 py-2 donate w-56 my-5 shadow-xl rounded-lg">
 			<a href="donate.html" class="flex">
