--- a/team.html
+++ b/team.html
@@ -56,7 +56,6 @@
 
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="donate.html">Donate</a>
-
 			</nav>
 		</div>
 	</div>
@@ -286,7 +285,8 @@
 						</li>
 
 					</ul>
-					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Senior and Journalist Political Constant</h2>
+					<h2 class="text-lg text-center tracking-tight text-gray-900 sm:text-lg">Senior and Journalist
+						Political Constant</h2>
 
 					<p class="text-base leading-7 text-gray-600 p-2"> Lorem ipsum dolor sit amet consectetur,
 						adipisicing elit. Perspiciatis consectetur explicabo possimus hic voluptatum magni. Fuga sunt
@@ -356,7 +356,7 @@
 
 			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-white hover:text-red-600">
+					<a href="https://www.facebook.com/parwez.khan.1671 " class="text-white hover:text-red-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
