--- a/Gallery/Legal-aid.html
+++ b/Gallery/Legal-aid.html
@@ -158,7 +158,7 @@
                         </svg>
                     </a>
 
-                    <a href=" " class="text-white hover:text-red-600">
+                    <a href="https://twitter.com/ParwezK95223012?t=SGCjrmmjOHceOGq_OJyJtw&s=08 " class="text-white hover:text-red-600">
                         <span class="sr-only">Twitter</span>
                         <svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path
